--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -27,7 +27,7 @@ basket img {
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-img {
+ball + img {
   position: absolute;
   z-index: 4;
   top: 260px;
@@ -36,7 +36,7 @@ img {
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
-/*__write_selector_here__*/ {
+Kitty 5 {
   position: absolute;
   z-index: 3;
   top: 217px;
